@@ -150,12 +150,12 @@ class ApiQueryCategories extends ApiQueryGeneratorBase {
 	}
 
 	protected function getDescription() {
-		return 'Returns all links from the given page(s)';
+		return 'List all categories the page(s) belong to';
 	}
 
 	protected function getExamples() {
 		return array (
-				"Get a list of categories used in the [[Albert Einstein]]:",
+				"Get a list of categories [[Albert Einstein]] belongs to:",
 				"  api.php?action=query&prop=categories&titles=Albert%20Einstein",
 				"Get information about all categories used in the [[Albert Einstein]]:",
 				"  api.php?action=query&generator=categories&titles=Albert%20Einstein&prop=info"
